sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2() {
val p=getNombreValeurs()
for (i<-p-2 to 0 by -1){
	for (j<-0 to i){
			if (PlusPetit(j,j+1)==false){
				echange(j,j+1)		 
	}
		
	}
}
}

